--- a/src/Web/WebSPA/Properties/launchSettings.json
+++ b/src/Web/WebSPA/Properties/launchSettings.json
@@ -3,15 +3,15 @@
     "WebSPA": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "",
+      "applicationUrl": "http://localhost:5104",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      },
-      "applicationUrl": "http://localhost:5104"
+      }
     },
     "Docker": {
       "commandName": "Docker",
       "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
+      "environmentVariables": {},
       "publishAllPorts": true
     }
   }
