--- a/src/Services/Webhooks/Webhooks.API/Properties/launchSettings.json
+++ b/src/Services/Webhooks/Webhooks.API/Properties/launchSettings.json
@@ -11,7 +11,8 @@
     "Docker": {
       "commandName": "Docker",
       "launchBrowser": true,
-      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}"
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
+      "environmentVariables": {}
     }
   }
 }
